<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_menu_lista"
            android:title="@string/menu_eventos" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_ajustes"
            android:title="@string/menu_ajustes" />
        <item
            android:id="@+id/nav_localizaciones"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_localizaciones" />
    </group>
</menu>