<resources>
    <string name="app_name">Proyecto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kiko-Gaku</string>
    <string name="nav_header_subtitle"> - Luis Alfonso Huertas Delgado\n - Miguel Jara Arroyo\n - Pedro del Castillo Gómez\n - Jorge del Castillo Gómez</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_ajustes">Ajustes</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textview">TextView</string>

    <!-- STRINGS DE LUIS-->
    <string name="n_iniciar_sesion">Iniciar sesión</string>
    <string name="n_registrarse">Registrarse</string>
    <string name="n_correo_electronico">Correo electrónico</string>
    <string name="n_contrasena">Contraseña</string>
    <string name="n_pregunta"><u>¿Aún no tienes una cuenta?</u></string>


    <string name="title_activity_lista_eventos">Lista de eventos</string>
    <string name="title_activity_registrarse">Inicio</string>
    <string name="title_activity_crear_evento">Crear un evento</string>
    <string name="title_activity_modificar_evento">Modificar evento</string>
    <string name="title_activity_detalles_evento">Detalles de un evento</string>

    <!-- Eventos -->
    <string name="n_crear_evento">Selecciona el tipo de evento</string>
    <string name="n_opcion_municipio">Evento de municipio</string>
    <string name="n_opcion">ó</string>
    <string name="n_opcion_montana">Evento de montaña</string>

    <string name="n_crear_municipio">Crear un evento de municipio</string>
    <string name="n_crear_montana">Crear un evento de montaña</string>
    <string name="n_nombre_evento">Nombre del evento</string>
    <string name="n_localidad_evento">Municipio</string>
    <string name="n_montana_evento">Montaña</string>
    <string name="n_latitud_evento">Latitud</string>
    <string name="n_longitud_evento">Longitud</string>
    <string name="n_fecha_inicio_evento">Fecha de inicio</string>
    <string name="n_fecha_fin_evento">Fecha de fin</string>
    <string name="n_descripcion_evento">Descripición del evento</string>
    <string name="n_etiqueta_crear">Crear evento</string>

    <string name="n_modificar">Modificar</string>
    <string name="n_etiqueta_modificar">Modificar evento</string>

    <string name="n_eliminar_evento">Eliminar</string>

    <string name="n_tipo_localidad">Tipo de evento:</string>
    <string name="n_municipio">Municipio</string>
    <string name="n_montana">Montaña</string>

    <string name="n_detalles_localidad">Localidad:</string>
    <string name="n_detalles_fecha_inicio">Fecha de inicio:</string>
    <string name="n_detalles_fecha_fin">Fecha de fin:</string>
    <string name="n_detalles_descripcion">Descripción:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings used for fragments for navigation -->

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="i">i -</string>
    <string name="title_activity_borrate">Borrate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="municipios">Municipios</string>
    <string name="montanas">Montañas</string>
    <string name="spinner">Spinner</string>
    <string name="ordenar_por">Ordenar por:</string>

    <string name="Nombre_municipio">Nombre</string>

    <string name="guardar">Guardar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="introduce_username">Introduce username</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="introduzca_contrase_a_actual">Introduzca contraseña actual</string>
    <string name="Cerrar_sesión">Cerrar sesión</string>
    <string name="textoVacio">-</string>
    <string name="fechaVacia">--/--/----</string>
    <string name="viento">Viento:</string>
    <string name="humedad">Humedad:</string>
    <string name="sensaci_n_t_rmica">Sensación Térmica:</string>
    <string name="MaxMinVacia">--º / --º</string>
    <string name="not_found">Not found</string>
    <string name="nombre">Nombre:</string>
    <string name="numeroNotfound">-1</string>
    <string name="descripci_n_del_evento">Descripción del evento</string>
    <string name="iconoclima">IconoClima</string>
    <string name="botonanadirnuevoevento">BotonAnadirNuevoEvento</string>
    <string name="localidad">Localidad</string>
    <string name="introduce_la_contrase_a">Introduce la contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="lightmode">Modo Claro</string>
    <string name="lightmode_sum">Activa modo claro en la aplicación</string>
</resources>